package com.lermala.lookconstructor.mainapp.data.storage;

public class SharedPreferencesUserStorage {
}
