package com.lermala.lookconstructor.mainapp.data.storage.fbase;

public class ConstantWorkWithFirebase {
    public final static String USER_PORTFOLIOS = "portfolios";
    public final static String USER_IMAGES = "portfolio_items";
    public final static String USER_KEY = "User";

    public final static String USER_NAME = "name";
    public final static String USER_DATE = "b_date";

    public final static String PORTFOLIO_NAME = "name";

}
