package com.lermala.lookconstructor.mainapp.presentation.ui;

public class Constant {
    public final static String USER_NAME = "user_name";
    public final static String USER_SEC_NAME = "user_sec_name";
    public final static String USER_EMAIL = "user_email";
    public final static String USER_IMAGE_ID = "user_image_id";

    public final static String PORTFOLIO_ID = "portfolio_id";
    public final static String PORTFOLIO_ITEM_IMAGE_ID = "image_id";

    public final static String REQUEST_CODE = "request";
    // public final static String PORTFOLIO_COUNT = "image_id";

    public final static String MESSAGE = "message";



}
